--- a/demo/index.html
+++ b/demo/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-         <script src="https://cdn.rawgit.com/colxi/css-var/master/css-var.js"></script>
-         <link rel="stylesheet" href="./style.css" />
-         <script src="./demo.js"></script>
+        <link rel="stylesheet" href="./style.css" />
+        <script src="../src/css-var.js"></script>
+        <script src="./demo.js"></script>
     </head>
-     <body>
+    <body>
         <div>Randomize!</div>
-     </body>
+    </body>
  <html>
