--- a/examples/demo-simple.html
+++ b/examples/demo-simple.html
@@ -1,8 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="./demo-simple.css" />
-        <script src="../src/css-global-variables.js"></script>
-        <script src="./demo-simple.js"></script>
+        <script src="./demo-simple.js" type="module"></script>
     </head>
     <body>
         <div>Randomize!</div>
